# Copyright 2001,2002,2003,2004,2005 Sun Microsystems, Inc.
# All Rights Reserved.  Use is subject to license terms.
# 
# See the file "license.terms" for information on usage and
# redistribution of this file, and for a DISCLAIMER OF ALL 
# WARRANTIES.
#

Change history for FreeTTS.
--------------------------

Month, Day, Year Release x.y:
    - Introduced an AliasDiphone class as a subclass of Diphone, which
      has a name and an original diphone; most API calls are just
      forwarded to the original diphone. (Marc Schroeder)
    - In text db files, introduced a new type of line, "ALIAS new
      old", where "old" is the name of an existing diphone (must have
      been defined higher-up in the text db file using the traditional
      "DIPHONE...." mechanism), and "new" is the new name under which
      the diphone is to be known additionally.
      DiphoneUnitDatabase.parseAndAdd () has been adapted accordingly.
      (Marc Schroeder)
    - In binary db files, introduced a new magic code identifying an
      alias diphone entry. Diphone.loadBinary() has been adapted
      accordingly. (Marc Schroeder)
    - Fixed "Class-Path" issue in manifest created by FestVoxToFreeTTS.
      (Willie Walker)

March 10, 2005 Release 1.2.1
    - Add support for metrics important to screen readers
    - Add drain delay to clip audio player - the lack of
      it was causing the end of speech to be cut on JDS/Linux

February 06, 2005 Release 1.2 (final)
    - Hang with JDK1.5 (bug 1019337)
    - Added support to build w/o requiring JSAPI
    - Only build tests on demand (more freedom from JUnit)
    - Added build targets to create standalone emacspeak app
    - Added ability for emacspeak demo to strip DECTalk commands from text
    - Added speaking rate change support to emacspeak demo
    - Allowed emacspeak text to omit '{' and '}' if text has no spaces
    - Changed state name expansion logic (bug 1101229)